# pyalchemy

./: LICENSE  README.md  pyproject.toml  setup.py
docs/: conf.py  pyalchemy.rst
docs/_build/doctrees/: modules.doctree
docs/_build/html/: genindex.html  objects.inv  py-modindex.html  pyalchemy.html
documentation/: index.html  modules.html  search.html
documentation/_sources/: index.rst.txt
examples/: Morse.py  QHO.py  harmonic_oscillator_1D.py  hydrogenlike_1D.py  morse_1D.py  multielectron_atom_3D.py  plot_fig2.py
pyalchemy0.0.7/: kernels.py  potentials.py
pyalchemy0.0.7/docs/_build/doctrees/: environment.pickle  index.doctree  pyalchemy.doctree
pyalchemy0.0.7/docs/_build/html/: .buildinfo  searchindex.js
pyalchemy0.0.7/docs/_build/html/_sources/: modules.rst.txt
pyalchemy0.0.7/examples/: harmonic_oscillator_1D.py  hydrogenlike_1D.py
pyalchemy0.1.0/: kernels.py  potentials.py
pyalchemy0.1.0/examples/: Morse.py
src/pyalchemy/: __init__.py  kernels.py  main.py  potentials.py
